# Robot_Operating_System_ROS2_Projects

./: README.md
install/: local_setup.sh  setup.sh
install/my_py_pkg/lib/my_py_pkg/: battery  led_panel  parameter_number_publisher
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  number_app.launch.py  number_app.launch.xml  number_app_from_python.launch.xml  package.sh  package.xml
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  (+4 more)
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/log/: latest_build
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  led_panel.py  number_counter.py  parameter_number_publisher.py  robot_news_station.py  template_python_node.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro  my_old_robot.urdf.xacro  my_robot.urdf  my_robot.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_urdf_robot/: package.xml  setup.cfg  setup.py
src/my_urdf_robot/launch/: display.launch.py
src/my_urdf_robot/urdf/: my_robot.urdf
src/turtlesim_catch_them_all/: package.xml  setup.py
src/turtlesim_catch_them_all/turtlesim_catch_them_all/: turtle_controller.py  turtle_spawner.py
(+210 files in other folders)
